--- a/PythonIDE_Testing/PythonIDE_Testing/pom.xml
+++ b/PythonIDE_Testing/PythonIDE_Testing/pom.xml
@@ -38,7 +38,11 @@
 <!--			<artifactId>json</artifactId>-->
 <!--			<version>20250107</version>-->
 <!--		</dependency>-->
-
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.15.3</version>
+		</dependency>
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
