--- a/PythonIDE_Testing/PythonIDE_Testing/pom.xml
+++ b/PythonIDE_Testing/PythonIDE_Testing/pom.xml
@@ -33,6 +33,16 @@
 			<artifactId>tyrus-standalone-client</artifactId>
 			<version>1.17</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
+			<version>2.3.3</version>
+			<scope>provided</scope>
+		</dependency>
+
+
+
 		<dependency>
 			<groupId>org.glassfish.tyrus</groupId>
 			<artifactId>tyrus-server</artifactId>
